<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/header_layout" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/join_bg_inner_small"
            android:orientation="vertical" >

            <include layout="@layout/layout_join_title" />

            <Spinner
                android:id="@+id/spinner_sido"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:prompt="@string/txt_province" >
            </Spinner>

            <Spinner
                android:id="@+id/spinner_gugun"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:prompt="@string/txt_city" >
            </Spinner>

            <Button
                android:id="@+id/join_btn_next"
                style="@style/join_btn_basic"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/txt_next" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/join_bg_top_shadow" />
    </FrameLayout>

</LinearLayout>